--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -23,5 +23,6 @@
   "iti112:8.1": "Saggio vittorioso su tutti?? ",
   "iti112:8.2": "libero da ogni legame?? ",
   "iti112:8.3": "Ottenuta la pace più alta ",
-  "iti112:8.4": "il Nibbāna da cui nulla temere "
+  "iti112:8.4": "il Nibbāna da cui nulla temere ",
+  "iti112:9.1": "Il Buddha ha distrutto ogni impulso "
 }
