--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -25,5 +25,6 @@
   "iti112:8.3": "Ottenuta la pace più alta ",
   "iti112:8.4": "il Nibbāna da cui nulla temere ",
   "iti112:9.1": "Il Buddha ha distrutto ogni impulso ",
-  "iti112:9.2": "indisturbato, libero dal dubbio, ** "
+  "iti112:9.2": "indisturbato, libero dal dubbio, ** ",
+  "iti112:9.3": "e ottenuto la distruzione di ogni karma "
 }
