--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -28,5 +28,5 @@
   "iti112:9.2": "indisturbato, libero dal dubbio, ** ",
   "iti112:9.3": "e ottenuto la distruzione di ogni karma ",
   "iti112:9.4": "libero con l’eradicazione dell’acquisizione/appropriazione ",
-  "iti112:10.1": "Ma c'è il Magnifico, il Buddha, "
+  "iti112:10.1": "Lui è il Magnifico, il Buddha, "
 }
