--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -30,5 +30,6 @@
   "iti112:9.4": "libero con l’eradicazione dell’acquisizione/appropriazione ",
   "iti112:10.1": "Lui è il Magnifico, il Buddha, ",
   "iti112:10.2": "lui è il supremo leone ",
+  "iti112:10.3": "in questo mondo con i suoi Deva ",
   "iti112:10.4": "ha messo in moto la ruota divina "
 }
