Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -31,5 +31,6 @@
   "iti112:10.1": "Lui è il Magnifico, il Buddha, ",
   "iti112:10.2": "lui è il supremo leone ",
   "iti112:10.3": "in questo mondo con i suoi Deva ",
-  "iti112:10.4": "ha messo in moto la ruota divina "
+  "iti112:10.4": "ha messo in moto la ruota divina ",
+  "iti112:11.1": "Così i deva e gli esseri umani "
 }
