--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -32,5 +32,6 @@
   "iti112:10.2": "lui è il supremo leone ",
   "iti112:10.3": "in questo mondo con i suoi Deva ",
   "iti112:10.4": "ha messo in moto la ruota divina ",
-  "iti112:11.1": "Così i deva e gli esseri umani "
+  "iti112:11.1": "Così i deva e gli esseri umani ",
+  "iti112:11.2": "prendono rifugio nel Budhha "
 }
