Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -33,5 +33,6 @@
   "iti112:10.3": "in questo mondo con i suoi Deva ",
   "iti112:10.4": "ha messo in moto la ruota divina ",
   "iti112:11.1": "Così i deva e gli esseri umani ",
-  "iti112:11.2": "prendono rifugio nel Budhha "
+  "iti112:11.2": "prendono rifugio nel Budhha ",
+  "iti112:11.3": "andando insieme rendono omaggio "
 }
