--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -35,5 +35,6 @@
   "iti112:11.1": "Così i deva e gli esseri umani ",
   "iti112:11.2": "prendono rifugio nel Budhha ",
   "iti112:11.3": "andando insieme rendono omaggio ",
-  "iti112:11.4": "alla sua grande maestria. "
+  "iti112:11.4": "alla sua grande maestria. ",
+  "iti112:12.1": "Addestrato migliore addestratore "
 }
