Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -37,5 +37,6 @@
   "iti112:11.3": "andando insieme rendono omaggio ",
   "iti112:11.4": "alla sua grande maestria. ",
   "iti112:12.1": "Addestrato migliore addestratore ",
-  "iti112:12.2": "il saggio calmo che calma "
+  "iti112:12.2": "il saggio calmo che calma ",
+  "iti112:12.3": "il supremo libero che libera "
 }
