Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -39,5 +39,6 @@
   "iti112:12.1": "Addestrato migliore addestratore ",
   "iti112:12.2": "il saggio calmo che calma ",
   "iti112:12.3": "il supremo libero che libera ",
-  "iti112:12.4": "l’eccellente che è andato oltre (ha attraversato) e che aiuta a traversare "
+  "iti112:12.4": "l’eccellente che è andato oltre (ha attraversato) e che aiuta a traversare ",
+  "iti112:13.1": "Così rendono omaggio "
 }
