--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -42,5 +42,6 @@
   "iti112:12.4": "l’eccellente che è andato oltre (ha attraversato) e che aiuta a traversare ",
   "iti112:13.1": "Così rendono omaggio* ",
   "iti112:13.2": "alla sua grande maestria. * ",
+  "iti112:13.3": "Nel mondo con i suoi Deva e essere umani ",
   "iti112:13.4": "non c’è uguale. "
 }
