--- a/translation/de/site/name/sutta/an-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/an-name_translation-de-site.json
@@ -750,7 +750,7 @@
   "an-name:749.an5.143": "Bei Sārandada ",
   "an-name:750.an5.144": "Bei Tikaṇḍakī ",
   "an-name:751.an5.145": "Die Hölle ",
-  "an-name:752.an5.146": "Eine Freundin ",
+  "an-name:752.an5.146": "Ein Freund ",
   "an-name:753.an5.147": "Gaben eines unwahren Menschen ",
   "an-name:754.an5.148": "Gaben eines wahren Menschen ",
   "an-name:755.an5.149": "Zeitweilig frei (1) ",
