--- a/translation/de/sabbamitta/sutta/an/an5/an5.146_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.146_translation-de-sabbamitta.json
@@ -8,6 +8,6 @@
   "an5.146:1.4": "Einem befreundeten Mönch, der diese fünf Eigenschaften besitzt, solltet ihr euch nicht anschließen. ",
   "an5.146:2.1": "Einem befreundeten Mönch, der fünf Eigenschaften besitzt, solltet ihr euch anschließen. ",
   "an5.146:2.2": "Welche fünf? ",
-  "an5.146:2.3": "Sie setzt keine Arbeitsmaßnahmen in Gang. Sie greift keine disziplinarischen Angelegenheiten auf. Sie sucht keine Auseinandersetzungen mit leitenden Nonnen oder Mönchen. Sie reist nicht gerne lange und unstet umher. Und sie ist in der Lage, euch von Zeit zu Zeit mit einem Dhammavortrag anzuleiten, zu ermuntern, zu begeistern und anzuregen. ",
+  "an5.146:2.3": "Er setzt keine Arbeitsmaßnahmen in Gang. Er greift keine disziplinarischen Angelegenheiten auf. Er sucht keine Auseinandersetzungen mit leitenden Nonnen oder Mönchen. Er reist nicht gerne lange und unstet umher. Und er ist in der Lage, euch von Zeit zu Zeit mit einem Dhammavortrag anzuleiten, zu ermuntern, zu begeistern und anzuregen. ",
   "an5.146:2.4": "Einer befreundeten Nonne, die diese fünf Eigenschaften besitzt, solltet ihr euch anschließen.“ "
 }
