--- a/translation/de/sabbamitta/sutta/an/an5/an5.146_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.146_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "an5.146:0.1": "Nummerierte Lehrreden 5.146 ",
   "an5.146:0.2": "15. Das Kapitel bei Tikaṇḍakī ",
   "an5.146:0.3": "Ein Freund ",
-  "an5.146:1.1": "„Mönche und Nonnen, einem befreundeten Mönch, der fünf Eigenschaften besitzt, solltet ihr euch nicht anschließen. ",
+  "an5.146:1.1": "„Mönche und Nonnen, einem befreundeten Mönch, der fünf Eigenschaften besitzt, sollt ihr euch nicht anschließen. ",
   "an5.146:1.2": "Welche fünf? ",
   "an5.146:1.3": "Er setzt Arbeitsmaßnahmen in Gang. Er greift disziplinarische Angelegenheiten auf. Er sucht Auseinandersetzungen mit leitenden Nonnen oder Mönchen. Er reist gerne lange und unstet umher. Und er ist nicht in der Lage, euch von Zeit zu Zeit mit einem Dhammavortrag anzuleiten, zu ermuntern, zu begeistern und anzuregen. ",
   "an5.146:1.4": "Einem befreundeten Mönch, der diese fünf Eigenschaften besitzt, solltet ihr euch nicht anschließen. ",
