Translations by sabbamitta to translation/de/site/interface_translation-de-site.json

--- a/translation/de/site/interface_translation-de-site.json
+++ b/translation/de/site/interface_translation-de-site.json
@@ -176,6 +176,7 @@
   "interface:mnEssayTitle": "Die Mittleren Lehrreden: Gespräche über Gegenstände von tiefer Wahrheit ",
   "interface:mnGuideSujato": "Ein Leitfaden zu den Mittleren Lehrreden ",
   "interface:mnGuideSujatoTitle": "Die Mittleren Lehrreden: Gespräche über Gegenstände von tiefer Wahrheit ",
+  "interface:moreAwesome": "Mehr fantastische SuttaCentral-Dinge ",
   "interface:names": "Namen ",
   "interface:namesTitle": "Namensregister ",
   "interface:networkError": "Netzwerkfehler ",
