Translations by sabbamitta to translation/de/site/interface_translation-de-site.json

--- a/translation/de/site/interface_translation-de-site.json
+++ b/translation/de/site/interface_translation-de-site.json
@@ -212,6 +212,7 @@
   "interface:subjects": "Themen ",
   "interface:subjectsTitle": "Themenregister ",
   "interface:sutta": "Lehrreden ",
+  "interface:suttaCentralVoice": "SuttaCentral Voice / de ",
   "interface:suttaEssayTitle": "Lehrreden: Unterhaltungen mit dem Buddha ",
   "interface:suttaplexCompactView": "Kompakte Ansicht benutzen ",
   "interface:terminology": "Terminologie ",
