Publishing translations for translation/de/site

--- a/translation/de/site/interface_translation-de-site.json
+++ b/translation/de/site/interface_translation-de-site.json
@@ -176,6 +176,7 @@
   "interface:mnEssayTitle": "Die Mittleren Lehrreden: Gespräche über Gegenstände von tiefer Wahrheit ",
   "interface:mnGuideSujato": "Ein Leitfaden zu den Mittleren Lehrreden ",
   "interface:mnGuideSujatoTitle": "Die Mittleren Lehrreden: Gespräche über Gegenstände von tiefer Wahrheit ",
+  "interface:moreAwesome": "Mehr fantastische SuttaCentral-Dinge ",
   "interface:names": "Namen ",
   "interface:namesTitle": "Namensregister ",
   "interface:networkError": "Netzwerkfehler ",
@@ -211,6 +212,7 @@
   "interface:subjects": "Themen ",
   "interface:subjectsTitle": "Themenregister ",
   "interface:sutta": "Lehrreden ",
+  "interface:suttaCentralVoice": "SuttaCentral Voice / de ",
   "interface:suttaEssayTitle": "Lehrreden: Unterhaltungen mit dem Buddha ",
   "interface:suttaplexCompactView": "Kompakte Ansicht benutzen ",
   "interface:terminology": "Terminologie ",
