Translations by sabbamitta to translation/de/site/interface_translation-de-site.json

--- a/translation/de/site/interface_translation-de-site.json
+++ b/translation/de/site/interface_translation-de-site.json
@@ -215,6 +215,7 @@
   "interface:suttaCentralVoice": "SuttaCentral Voice / de ",
   "interface:suttaEssayTitle": "Lehrreden: Unterhaltungen mit dem Buddha ",
   "interface:suttaplexCompactView": "Kompakte Ansicht benutzen ",
+  "interface:tableOfContent": "Inhaltsverzeichnis ",
   "interface:terminology": "Terminologie ",
   "interface:terminologyTitle": "Grundlegende Pali-Terminologie ",
   "interface:textSettings": "Texteinstellungen ",
