--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti112:2.1": "Il mondo è stato completamente compreso dal Buddha. ",
   "iti112:2.2": "Il Buddha è libero dal giogo del mondo. ",
-  "iti112:2.3": "L’origine del mondo è completamente compresa dal Buddha. ",
+  "iti112:2.3": "L’origine del mondo è stata completamente compresa dal Buddha. ",
   "iti112:2.4": "Il Buddha ha completamente eliminato la causa del mondo. ",
   "iti112:2.5": "La fine del mondo è completamente compresa dal Buddha. ",
   "iti112:2.6": "Il Buddha ha visto di persona la fine del mondo. ",
