--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti112:2.2": "Il Buddha è libero dal giogo del mondo. ",
   "iti112:2.3": "L’origine del mondo è stata completamente compresa dal Buddha. ",
   "iti112:2.4": "Il Buddha ha completamente eliminato la causa del mondo. ",
-  "iti112:2.5": "La fine del mondo è completamente compresa dal Buddha. ",
+  "iti112:2.5": "La fine del mondo è stata completamente compresa dal Buddha. ",
   "iti112:2.6": "Il Buddha ha visto di persona la fine del mondo. ",
   "iti112:2.7": "La via che conduce alla fine del mondo, è completamente compresa dal Buddha. ",
   "iti112:2.8": "Il Buddha ha portato a compimento la via che conduce alla fine del mondo. ",
