Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -12,7 +12,7 @@
   "iti112:4.1": "È per via del fatto che il Buddha ha realizzato la perfetta suprema illuminazione in una notte, e si è completamento emancipato con lo stato del Nibbāna senza carburante/combustibile residuo, e che in quella occasione ha recitato, dichiarato e indicato tutto esattamente com’è, e non altrimenti, ",
   "iti112:4.2": "che viene chiamato Buddha. ",
   "iti112:5.1": "Il Buddha parla in un modo, agisce in un modo, parla e agisce in un modo?? ",
-  "iti112:5.2": "come parla così agisce, e come agisce così parla ???? ",
+  "iti112:5.2": "È per questo motivo ",
   "iti112:5.3": "x ",
   "iti112:6.1": "l’Altissimo, il Vincitore, l’Invincibile, l’Onnisciente, l’Onnipotente in questo mondo con i suoi deva, Māra, Brahma, contemplativi e bramini, gente, dei e umani, ",
   "iti112:6.2": "x ",
