Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti112:5.1": "Le azioni del Buddha corrispondono alle sue parole e le sue parole corrispondono alle sue azioni. ",
   "iti112:5.2": "È per questo motivo ",
   "iti112:5.3": "x ",
-  "iti112:6.1": "l’Altissimo, il Vincitore, l’Invincibile, l’Onnisciente, l’Onnipotente in questo mondo con i suoi deva, Māra, Brahma, contemplativi e bramini, gente, dei e umani, ",
+  "iti112:6.1": "In questo mondo con i suoi deva, Māra, Brahma, contemplativi e bramini, gente, dei e umani, \nil Buddha è il Vincitore, l’Invincibile, l’Onnisciente, l’Onnipotente, ",
   "iti112:6.2": "x ",
   "iti112:7.1": "Conoscendo direttamente tutto il mondo, ",
   "iti112:7.2": "tutto il mondo così com’è?? ",
