--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -16,7 +16,7 @@
   "iti112:5.3": "x ",
   "iti112:6.1": "In questo mondo con i suoi deva, Māra, Brahma, contemplativi e bramini, gente, dei e umani, \nil Buddha è il Vincitore, l’Invincibile, l’Onnisciente, l’Onnipotente, ",
   "iti112:6.2": "x ",
-  "iti112:7.1": "Conoscendo direttamente tutto il mondo, ",
+  "iti112:7.1": "Conoscendo tutto il mondo così com’è, ",
   "iti112:7.2": "tutto il mondo così com’è?? ",
   "iti112:7.3": "Sottratta a ogni giogo del mondo, ",
   "iti112:7.4": "non è attratto da tutto il mondo.?? ",
