Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -19,7 +19,7 @@
   "iti112:7.1": "Conoscendo tutto il mondo ",
   "iti112:7.2": "in tutto e per tutto, così com’è, ",
   "iti112:7.3": "sottratto a ogni giogo del mondo, ",
-  "iti112:7.4": "non è attratto da tutto il mondo.?? ",
+  "iti112:7.4": "non viene attratto da nulla nel mondo. ",
   "iti112:8.1": "Saggio vittorioso su tutti?? ",
   "iti112:8.2": "libero da ogni legame?? ",
   "iti112:8.3": "Ottenuta la pace più alta ",
