Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -21,7 +21,7 @@
   "iti112:7.3": "sottratto a ogni giogo del mondo, ",
   "iti112:7.4": "non viene attratto da nulla nel mondo. ",
   "iti112:8.1": "Saggio vittorioso primo su tutti ",
-  "iti112:8.2": "libero da ogni legame?? ",
+  "iti112:8.2": "libero da ogni legame* ",
   "iti112:8.3": "Ottenuta la pace più alta ",
   "iti112:8.4": "il Nibbāna da cui nulla temere ",
   "iti112:9.1": "Il Buddha ha distrutto ogni impulso ",
