--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -23,7 +23,7 @@
   "iti112:8.1": "Saggio vittorioso primo su tutti ",
   "iti112:8.2": "libero da ogni legame* ",
   "iti112:8.3": "ha ottenuto la pace più alta ",
-  "iti112:8.4": "il Nibbāna da cui nulla temere ",
+  "iti112:8.4": "il Nibbāna dopo cui non c’è nulla da temere ",
   "iti112:9.1": "Il Buddha ha distrutto ogni impulso ",
   "iti112:9.2": "indisturbato, libero dal dubbio, ** ",
   "iti112:9.3": "e ottenuta la distruzione di ogni karma ",
