--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -34,7 +34,7 @@
   "iti112:10.4": "ha messo in moto la ruota divina. ",
   "iti112:11.1": "Così i deva e gli esseri umani ",
   "iti112:11.2": "che hanno preso rifugio nel Budhha ",
-  "iti112:11.3": "andando insieme rendono omaggio ",
+  "iti112:11.3": "vanno insieme a rendergli omaggio ",
   "iti112:11.4": "alla sua grande maestria. ",
   "iti112:12.1": "Addestrato migliore addestratore ",
   "iti112:12.2": "il saggio calmo che calma ",
