Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -35,7 +35,7 @@
   "iti112:11.1": "Così i deva e gli esseri umani ",
   "iti112:11.2": "che hanno preso rifugio nel Budhha ",
   "iti112:11.3": "vanno insieme a rendere omaggio a lui ",
-  "iti112:11.4": "alla sua grande maestria. ",
+  "iti112:11.4": "e alla sua grande maestria. ",
   "iti112:12.1": "Addestrato migliore addestratore ",
   "iti112:12.2": "il saggio calmo che calma ",
   "iti112:12.3": "il supremo libero che libera ",
