Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -36,7 +36,7 @@
   "iti112:11.2": "che hanno preso rifugio nel Budhha ",
   "iti112:11.3": "vanno insieme a rendere omaggio a lui ",
   "iti112:11.4": "e alla sua grande maestria. ",
-  "iti112:12.1": "Domato, è il migliore domatore; ",
+  "iti112:12.1": "Domato lui stesso, è il migliore domatore; ",
   "iti112:12.2": "il saggio calmo che calma ",
   "iti112:12.3": "il supremo libero che libera ",
   "iti112:12.4": "l’eccellente che è andato oltre (ha attraversato) e che aiuta a traversare ",
