Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -40,7 +40,7 @@
   "iti112:12.2": "il placido saggio che aiuta a placare, ",
   "iti112:12.3": "libero, è il supremo liberatore, ",
   "iti112:12.4": "andato oltre (ha attraversato), è eccellente e aiuta a traversare. ",
-  "iti112:13.1": "Per quello gli rendono omaggio* ",
+  "iti112:13.1": "Per quello rendono omaggio a lui* ",
   "iti112:13.2": "alla sua grande maestria. * ",
   "iti112:13.3": "Nel mondo con i suoi Deva e essere umani ",
   "iti112:13.4": "non c’è uguale. "
