Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti104:2.5": "ricordare, ",
   "iti104:2.6": "seguire quel cercatore è di grande aiuto per voi. ",
   "iti104:2.7": "Perchè questo? ",
-  "iti104:2.8": "I cercatori che servono persone di questo tipo, lo accompagnano, e le stanno vicini [a tale persona], se hanno qualcosa di incompleto nel khanda della moralità, del samādhi, della sapienza, della liberazione, della conoscenza e visione della liberazione, la portano a compimento tramite la coltivazione. ",
+  "iti104:2.8": "I cercatori che servono persone di questo tipo, lo accompagnano, e le stanno vicini [a tale persona], se hanno qualcosa di incompleto per quanto riguarda moralità, samādhi, sapienza, liberazione, conoscenza e visione della liberazione, la portano a compimento tramite la coltivazione. ",
   "iti104:2.9": "Cercatori di questo tipo sono chiamati maestri, capi, che hanno abbandonato i conflitti, rimosso l’oscurità, portatori di luce, creatori di radiosità, portano la torcia, creatori di luminosità, nobili, che hanno visione. ",
   "iti104:3.1": "La causa del creare la gioia (gaiezza), ",
   "iti104:3.2": "è di quelli che conoscono ",
