Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga4/iti34_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga4/iti34_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga4/iti34_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti34:3.3": "con tanta sonnolenza e torpore ",
   "iti34:3.4": "senza vergogna, senza rispetto ",
   "iti34:3.5": "Quel cercatore è incapace ",
-  "iti34:3.6": "di raggiungere l’insuperabile (la piu' altra) illuminazione. ",
+  "iti34:3.6": "di raggiungere l’insuperabile (la piu' alta) illuminazione. ",
   "iti34:4.1": "Questo è un mistico consapevole, astuto, ",
   "iti34:4.2": "zelante, integerrimo, solerte. ",
   "iti34:4.3": "Tagliando la catena della nascita e della morte ",
