Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "mn82:0.1": "Mittlere Lehrreden 82 ",
-  "mn82:0.2": "Mit Raṭṭhapāla "
+  "mn82:0.2": "Mit Raṭṭhapāla ",
+  "mn82:1.1": "So habe ich es gehört: "
 }
