--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "mn82:0.1": "Mittlere Lehrreden 82 ",
   "mn82:0.2": "Mit Raṭṭhapāla ",
   "mn82:1.1": "So habe ich es gehört: ",
-  "mn82:1.2": "Einmal wanderte der Buddha mit einem großen Saṅgha von Mönchen und Nonnen durch das Land der Kurus. Er kam zu einem Marktflecken der Kurus mit Namen Thullakoṭṭhita. "
+  "mn82:1.2": "Einmal wanderte der Buddha mit einem großen Saṅgha von Mönchen und Nonnen durch das Land der Kurus. Er kam zu einem Marktflecken der Kurus mit Namen Thullakoṭṭhita. ",
+  "mn82:2.1": "Die Brahmanen und Hausbesitzer von Thullakoṭṭhita hörten: "
 }
