--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "mn82:1.2": "Einmal wanderte der Buddha mit einem großen Saṅgha von Mönchen und Nonnen durch das Land der Kurus. Er kam zu einem Marktflecken der Kurus mit Namen Thullakoṭṭhita. ",
   "mn82:2.1": "Die Brahmanen und Hausbesitzer von Thullakoṭṭhita hörten: ",
   "mn82:2.2": "„Es scheint, der Asket Gotama – ein Sakyer, der von einer Familie der Sakyer fortgezogen ist – ist zusammen mit einem großen Saṅgha von Mönchen und Nonnen in Thullakoṭṭhita angekommen. ",
-  "mn82:2.3": "Er hat diesen guten Ruf: "
+  "mn82:2.3": "Er hat diesen guten Ruf: ",
+  "mn82:2.4": "‚Dieser Gesegnete ist vollendet, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet.‘ "
 }
