--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "mn82:2.3": "Er hat diesen guten Ruf: ",
   "mn82:2.4": "‚Dieser Gesegnete ist vollendet, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet.‘ ",
   "mn82:2.5": "Er hat diese Welt – mit ihren Göttern, Māras und Brahmās, mit dieser Bevölkerung mit ihren Asketen und Brahmanen, Göttern und Menschen – durch eigene Einsicht erkannt und erklärt sie anderen. ",
-  "mn82:2.6": "Er lehrt den Dhamma, der am Anfang gut, in der Mitte gut und am Ende gut ist, bedeutsam und gut ausgedrückt. Und er legt ein geistliches Leben dar, das ganz vollständig und rein ist. "
+  "mn82:2.6": "Er lehrt den Dhamma, der am Anfang gut, in der Mitte gut und am Ende gut ist, bedeutsam und gut ausgedrückt. Und er legt ein geistliches Leben dar, das ganz vollständig und rein ist. ",
+  "mn82:2.7": "Es ist gut, solche Vollendeten zu sehen.“ "
 }
