--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "mn82:3.1": "Da gingen die Brahmanen und Hausbesitzer von Thullakoṭṭhita zum Buddha. Manche verbeugten sich, manche begrüßten ihn und tauschten Höflichkeiten aus, manche hielten ihm ihre zusammengelegten Hände entgegen, manche nannten ihren Namen und Stamm und manche schwiegen. Sie setzten sich zur Seite hin. ",
   "mn82:3.2": "Als sie sich gesetzt hatten, leitete der Buddha sie mit einem Dhammavortrag an, ermunterte sie, begeisterte sie und regte sie an. ",
   "mn82:4.1": "Da saß zu dieser Zeit ein ehrbarer Mann mit Namen Raṭṭhapāla, der Sohn des führenden Stammes in Thullakoṭṭhita, in dieser Versammlung. ",
-  "mn82:4.2": "Er dachte: "
+  "mn82:4.2": "Er dachte: ",
+  "mn82:4.3": "„So, wie ich die Lehre des Buddha verstehe, ist es nicht einfach, wenn man im Haus lebt, das geistliche Leben ganz vollständig und rein zu führen wie eine blank gescheuerte Muschel. "
 }
