--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "mn82:3.2": "Als sie sich gesetzt hatten, leitete der Buddha sie mit einem Dhammavortrag an, ermunterte sie, begeisterte sie und regte sie an. ",
   "mn82:4.1": "Da saß zu dieser Zeit ein ehrbarer Mann mit Namen Raṭṭhapāla, der Sohn des führenden Stammes in Thullakoṭṭhita, in dieser Versammlung. ",
   "mn82:4.2": "Er dachte: ",
-  "mn82:4.3": "„So, wie ich die Lehre des Buddha verstehe, ist es nicht einfach, wenn man im Haus lebt, das geistliche Leben ganz vollständig und rein zu führen wie eine blank gescheuerte Muschel. "
+  "mn82:4.3": "„So, wie ich die Lehre des Buddha verstehe, ist es nicht einfach, wenn man im Haus lebt, das geistliche Leben ganz vollständig und rein zu führen wie eine blank gescheuerte Muschel. ",
+  "mn82:4.4": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?“ "
 }
