--- a/translation/de/sabbamitta/sutta/sn/sn42/sn42.13_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn42/sn42.13_translation-de-sabbamitta.json
@@ -166,7 +166,7 @@
   "sn42.13:24.5": "wenn das wahr ist, was dieser gute Lehrer sagt, ist es eine unfehlbare Wette, wenn ich kein Geschöpf verletze, kräftig oder zart. ",
   "sn42.13:24.6": "Ich habe eine perfekte Hand auf beiden Seiten, da ich mit Körper, Sprache und Geist gezügelt bin, und wenn mein Körper auseinanderbricht, nach dem Tod, werde ich an einem guten Ort wiedergeboren, in einer himmlischen Welt.‘ ",
   "sn42.13:24.7": "Freude lodert in ihm auf. ",
-  "sn42.13:24.8": "Wenn sie voller Freude ist, lodert Ekstase auf. ",
+  "sn42.13:24.8": "Wenn er voller Freude ist, lodert Ekstase auf. ",
   "sn42.13:24.9": "Wenn der Geist in Ekstase ist, wird der Körper still. ",
   "sn42.13:24.10": "Wenn der Körper still ist, empfindet sie Seligkeit. ",
   "sn42.13:24.11": "Und wenn man voller Seligkeit ist, versenkt sich der Geist im Samādhi. ",
