--- a/translation/de/sabbamitta/sutta/sn/sn42/sn42.13_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn42/sn42.13_translation-de-sabbamitta.json
@@ -168,7 +168,7 @@
   "sn42.13:24.7": "Freude lodert in ihm auf. ",
   "sn42.13:24.8": "Wenn er voller Freude ist, lodert Ekstase auf. ",
   "sn42.13:24.9": "Wenn der Geist in Ekstase ist, wird der Körper still. ",
-  "sn42.13:24.10": "Wenn der Körper still ist, empfindet sie Seligkeit. ",
+  "sn42.13:24.10": "Wenn der Körper still ist, empfindet er Seligkeit. ",
   "sn42.13:24.11": "Und wenn man voller Seligkeit ist, versenkt sich der Geist im Samādhi. ",
   "sn42.13:24.12": "Das ist die Versenkung, die sich auf das Verstehen von Grundsätzen stützt. ",
   "sn42.13:24.13": "Wenn man eine solche Versenkung des Geistes erlangt, kann man diesen Zweifelszustand aufgeben. ",
