--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "mn82:4.1": "Da saß zu dieser Zeit ein ehrbarer Mann mit Namen Raṭṭhapāla, der Sohn des führenden Stammes in Thullakoṭṭhita, in dieser Versammlung. ",
   "mn82:4.2": "Er dachte: ",
   "mn82:4.3": "„So, wie ich die Lehre des Buddha verstehe, ist es nicht einfach, wenn man im Haus lebt, das geistliche Leben ganz vollständig und rein zu führen wie eine blank gescheuerte Muschel. ",
-  "mn82:4.4": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?“ "
+  "mn82:4.4": "Warum rasiere ich mir nicht Haar und Bart, lege ockerfarbene Roben an und ziehe aus dem Haus fort ins hauslose Leben?“ ",
+  "mn82:5.1": "Da begrüßten die Brahmanen und Hausbesitzer von Thullakoṭṭhita die Worte des Buddha und stimmten ihm zu. Sie erhoben sich von ihren Sitzen, verbeugten sich, umrundeten den Buddha respektvoll, die rechte Seite ihm zugewandt, und gingen. "
 }
