Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "mn82:6.1": "Kurz nachdem sie gegangen waren, ging Raṭṭhapāla zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zu ihm: ",
   "mn82:6.2": "„Herr, so, wie ich die Lehre des Buddha verstehe, ist es nicht einfach, wenn man im Haus lebt, das geistliche Leben ganz vollständig und rein zu führen wie eine blank gescheuerte Muschel. ",
   "mn82:6.3": "Ich wünsche, mir Haar und Bart zu rasieren, ockerfarbene Roben anzulegen und aus dem Haus fortzuziehen ins hauslose Leben. ",
-  "mn82:6.4": "Herr, darf ich vor dem Buddha die Weihe des Fortziehens erhalten, die Ordination? "
+  "mn82:6.4": "Herr, darf ich vor dem Buddha die Weihe des Fortziehens erhalten, die Ordination? ",
+  "mn82:6.5": "Dass der Buddha mir bitte die Weihe des Fortziehens gebe!“ "
 }
