--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "mn82:6.2": "„Herr, so, wie ich die Lehre des Buddha verstehe, ist es nicht einfach, wenn man im Haus lebt, das geistliche Leben ganz vollständig und rein zu führen wie eine blank gescheuerte Muschel. ",
   "mn82:6.3": "Ich wünsche, mir Haar und Bart zu rasieren, ockerfarbene Roben anzulegen und aus dem Haus fortzuziehen ins hauslose Leben. ",
   "mn82:6.4": "Herr, darf ich vor dem Buddha die Weihe des Fortziehens erhalten, die Ordination? ",
-  "mn82:6.5": "Dass der Buddha mir bitte die Weihe des Fortziehens gebe!“ "
+  "mn82:6.5": "Dass der Buddha mir bitte die Weihe des Fortziehens gebe!“ ",
+  "mn82:6.6": "„Aber Raṭṭhapāla, hast du die Erlaubnis deiner Eltern?“ "
 }
