--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "mn82:6.3": "Ich wünsche, mir Haar und Bart zu rasieren, ockerfarbene Roben anzulegen und aus dem Haus fortzuziehen ins hauslose Leben. ",
   "mn82:6.4": "Herr, darf ich vor dem Buddha die Weihe des Fortziehens erhalten, die Ordination? ",
   "mn82:6.5": "Dass der Buddha mir bitte die Weihe des Fortziehens gebe!“ ",
-  "mn82:6.6": "„Aber Raṭṭhapāla, hast du die Erlaubnis deiner Eltern?“ "
+  "mn82:6.6": "„Aber Raṭṭhapāla, hast du die Erlaubnis deiner Eltern?“ ",
+  "mn82:6.7": "„Nein, Herr.“ "
 }
