--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "mn82:6.5": "Dass der Buddha mir bitte die Weihe des Fortziehens gebe!“ ",
   "mn82:6.6": "„Aber Raṭṭhapāla, hast du die Erlaubnis deiner Eltern?“ ",
   "mn82:6.7": "„Nein, Herr.“ ",
-  "mn82:6.8": "„Raṭṭhapāla, Buddhas erteilen dem Kind von Eltern, die nicht ihre Erlaubnis gegeben haben, nicht die Weihe des Fortziehens.“ "
+  "mn82:6.8": "„Raṭṭhapāla, Buddhas erteilen dem Kind von Eltern, die nicht ihre Erlaubnis gegeben haben, nicht die Weihe des Fortziehens.“ ",
+  "mn82:6.9": "„Herr, ich werde dafür sorgen, dass ich die Erlaubnis meiner Eltern erhalte.“ "
 }
