Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "mn82:6.6": "„Aber Raṭṭhapāla, hast du die Erlaubnis deiner Eltern?“ ",
   "mn82:6.7": "„Nein, Herr.“ ",
   "mn82:6.8": "„Raṭṭhapāla, Buddhas erteilen dem Kind von Eltern, die nicht ihre Erlaubnis gegeben haben, nicht die Weihe des Fortziehens.“ ",
-  "mn82:6.9": "„Herr, ich werde dafür sorgen, dass ich die Erlaubnis meiner Eltern erhalte.“ "
+  "mn82:6.9": "„Herr, ich werde dafür sorgen, dass ich die Erlaubnis meiner Eltern erhalte.“ ",
+  "mn82:7.1": "Da erhob sich Raṭṭhapāla von seinem Sitz, verbeugte sich und umrundete den Buddha respektvoll. Dann ging er zu seinen Eltern und sagte: "
 }
