--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "mn82:7.2": "„Mutter, Vater, so, wie ich die Lehre des Buddha verstehe, ist es nicht einfach, wenn man im Haus lebt, das geistliche Leben ganz vollständig und rein zu führen wie eine blank gescheuerte Muschel. ",
   "mn82:7.3": "Ich wünsche, mir Haar und Bart zu rasieren, ockerfarbene Roben anzulegen und aus dem Haus fortzuziehen ins hauslose Leben. ",
   "mn82:7.4": "Bitte gebt mir die Erlaubnis zum Fortziehen.“ ",
-  "mn82:7.5": "Daraufhin entgegneten die Eltern Raṭṭhapāla: "
+  "mn82:7.5": "Daraufhin entgegneten die Eltern Raṭṭhapāla: ",
+  "mn82:7.6": "„Aber lieber Raṭṭhapāla, du bist unser einziges Kind. Du bist uns lieb und teuer. Du bist zart und wurdest in Bequemlichkeit aufgezogen. "
 }
