Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "mn82:7.3": "Ich wünsche, mir Haar und Bart zu rasieren, ockerfarbene Roben anzulegen und aus dem Haus fortzuziehen ins hauslose Leben. ",
   "mn82:7.4": "Bitte gebt mir die Erlaubnis zum Fortziehen.“ ",
   "mn82:7.5": "Daraufhin entgegneten die Eltern Raṭṭhapāla: ",
-  "mn82:7.6": "„Aber lieber Raṭṭhapāla, du bist unser einziges Kind. Du bist uns lieb und teuer. Du bist zart und wurdest in Bequemlichkeit aufgezogen. "
+  "mn82:7.6": "„Aber lieber Raṭṭhapāla, du bist unser einziges Kind. Du bist uns lieb und teuer. Du bist zart und wurdest in Bequemlichkeit aufgezogen. ",
+  "mn82:7.7": "Du weißt nichts vom Leiden. "
 }
