Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "mn82:7.4": "Bitte gebt mir die Erlaubnis zum Fortziehen.“ ",
   "mn82:7.5": "Daraufhin entgegneten die Eltern Raṭṭhapāla: ",
   "mn82:7.6": "„Aber lieber Raṭṭhapāla, du bist unser einziges Kind. Du bist uns lieb und teuer. Du bist zart und wurdest in Bequemlichkeit aufgezogen. ",
-  "mn82:7.7": "Du weißt nichts vom Leiden. "
+  "mn82:7.7": "Du weißt nichts vom Leiden. ",
+  "mn82:7.8": "Wenn du stirbst, werden wir dich gegen unseren Willen verlieren. "
 }
