--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "mn82:7.6": "„Aber lieber Raṭṭhapāla, du bist unser einziges Kind. Du bist uns lieb und teuer. Du bist zart und wurdest in Bequemlichkeit aufgezogen. ",
   "mn82:7.7": "Du weißt nichts vom Leiden. ",
   "mn82:7.8": "Wenn du stirbst, werden wir dich gegen unseren Willen verlieren. ",
-  "mn82:7.9": "Wie können wir dir daher erlauben, fortzuziehen, solange du noch lebst?“ "
+  "mn82:7.9": "Wie können wir dir daher erlauben, fortzuziehen, solange du noch lebst?“ ",
+  "mn82:7.10": "Zum zweiten "
 }
