--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "mn82:7.7": "Du weißt nichts vom Leiden. ",
   "mn82:7.8": "Wenn du stirbst, werden wir dich gegen unseren Willen verlieren. ",
   "mn82:7.9": "Wie können wir dir daher erlauben, fortzuziehen, solange du noch lebst?“ ",
-  "mn82:7.10": "Zum zweiten "
+  "mn82:7.10": "Zum zweiten ",
+  "mn82:7.11": "und zum dritten Mal bat Raṭṭhapāla seine Eltern um Erlaubnis und erhielt jeweils die gleiche Antwort. "
 }
