Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -36,5 +36,6 @@
   "mn82:7.8": "Wenn du stirbst, werden wir dich gegen unseren Willen verlieren. ",
   "mn82:7.9": "Wie können wir dir daher erlauben, fortzuziehen, solange du noch lebst?“ ",
   "mn82:7.10": "Zum zweiten ",
-  "mn82:7.11": "und zum dritten Mal bat Raṭṭhapāla seine Eltern um Erlaubnis und erhielt jeweils die gleiche Antwort. "
+  "mn82:7.11": "und zum dritten Mal bat Raṭṭhapāla seine Eltern um Erlaubnis und erhielt jeweils die gleiche Antwort. ",
+  "mn82:7.20": "Da dachte Raṭṭhapāla: "
 }
