Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -45,5 +45,6 @@
   "mn82:8.2": "„Lieber Raṭṭhapāla, du bist unser einziges Kind. Du bist uns lieb und teuer. Du bist zart und wurdest in Bequemlichkeit aufgezogen. ",
   "mn82:8.3": "Du weißt nichts vom Leiden. ",
   "mn82:8.4": "Wenn du stirbst, werden wir dich gegen unseren Willen verlieren. ",
-  "mn82:8.5": "Wie können wir dir daher erlauben, aus dem Haus fortzuziehen ins hauslose Leben, solange du noch lebst? "
+  "mn82:8.5": "Wie können wir dir daher erlauben, aus dem Haus fortzuziehen ins hauslose Leben, solange du noch lebst? ",
+  "mn82:8.6": "Steh auf, Raṭṭhapāla! Iss und trink und vergnüge dich! "
 }
