Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -48,5 +48,6 @@
   "mn82:8.5": "Wie können wir dir daher erlauben, aus dem Haus fortzuziehen ins hauslose Leben, solange du noch lebst? ",
   "mn82:8.6": "Steh auf, Raṭṭhapāla! Iss und trink und vergnüge dich! ",
   "mn82:8.7": "Genieße Sinnenfreuden und freue dich am Verdienstschaffen! ",
-  "mn82:8.8": "Wir erlauben dir nicht, fortzuziehen. "
+  "mn82:8.8": "Wir erlauben dir nicht, fortzuziehen. ",
+  "mn82:8.9": "Wenn du stirbst, werden wir dich gegen unseren Willen verlieren. "
 }
