Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -51,5 +51,6 @@
   "mn82:8.8": "Wir erlauben dir nicht, fortzuziehen. ",
   "mn82:8.9": "Wenn du stirbst, werden wir dich gegen unseren Willen verlieren. ",
   "mn82:8.10": "Wie können wir dir daher erlauben, fortzuziehen, solange du noch lebst?“ ",
-  "mn82:8.11": "Auf diese Worte schwieg Raṭṭhapāla. "
+  "mn82:8.11": "Auf diese Worte schwieg Raṭṭhapāla. ",
+  "mn82:8.12": "Zum zweiten "
 }
