Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -56,5 +56,6 @@
   "mn82:8.14": "und zum dritten Mal wiederholten Raṭṭhapāla Eltern ihr Drängen, ",
   "mn82:9.1": "und jedesmal schwieg Raṭṭhapāla. Raṭṭhapālas Eltern gingen zu seinen Freunden. Sie schilderten ihnen die Lage und baten um ihre Hilfe. ",
   "mn82:10.1": "Da kamen Raṭṭhapālas Freunde zu ihm und sagten: ",
-  "mn82:10.2": "„Unser Freund Raṭṭhapāla, du bist das einzige Kind deiner Eltern. Du bist ihnen lieb und teuer. Du bist zart und wurdest in Bequemlichkeit aufgezogen. "
+  "mn82:10.2": "„Unser Freund Raṭṭhapāla, du bist das einzige Kind deiner Eltern. Du bist ihnen lieb und teuer. Du bist zart und wurdest in Bequemlichkeit aufgezogen. ",
+  "mn82:10.3": "Du weißt nichts vom Leiden. "
 }
