Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "mn82:10.1": "Da kamen Raṭṭhapālas Freunde zu ihm und sagten: ",
   "mn82:10.2": "„Unser Freund Raṭṭhapāla, du bist das einzige Kind deiner Eltern. Du bist ihnen lieb und teuer. Du bist zart und wurdest in Bequemlichkeit aufgezogen. ",
   "mn82:10.3": "Du weißt nichts vom Leiden. ",
-  "mn82:10.4": "Wenn du stirbst, werden deine Eltern dich gegen ihren Willen verlieren. "
+  "mn82:10.4": "Wenn du stirbst, werden deine Eltern dich gegen ihren Willen verlieren. ",
+  "mn82:10.5": "Wie können sie dir daher erlauben, fortzuziehen, solange du noch lebst? "
 }
