Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -65,5 +65,6 @@
   "mn82:10.8": "Deine Eltern erlauben dir nicht, fortzuziehen. ",
   "mn82:10.9": "Wenn du stirbst, werden sie dich gegen ihren Willen verlieren. ",
   "mn82:10.10": "Wie können wir dir daher erlauben, fortzuziehen, solange du noch lebst?“ ",
-  "mn82:10.11": "Auf diese Worte schwieg Raṭṭhapāla. "
+  "mn82:10.11": "Auf diese Worte schwieg Raṭṭhapāla. ",
+  "mn82:10.12": "Zum zweiten "
 }
