Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -68,5 +68,6 @@
   "mn82:10.11": "Auf diese Worte schwieg Raṭṭhapāla. ",
   "mn82:10.12": "Zum zweiten ",
   "mn82:10.13": "und zum dritten Mal wiederholten Raṭṭhapālas Freunde ihr Drängen, ",
-  "mn82:10.19": "und jedesmal schwieg Raṭṭhapāla. "
+  "mn82:10.19": "und jedesmal schwieg Raṭṭhapāla. ",
+  "mn82:11.1": "Da gingen Raṭṭhapālas Freunde zu seinen Eltern und sagten: "
 }
