Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -70,5 +70,6 @@
   "mn82:10.13": "und zum dritten Mal wiederholten Raṭṭhapālas Freunde ihr Drängen, ",
   "mn82:10.19": "und jedesmal schwieg Raṭṭhapāla. ",
   "mn82:11.1": "Da gingen Raṭṭhapālas Freunde zu seinen Eltern und sagten: ",
-  "mn82:11.2": "„Mutter, Vater, Raṭṭhapāla liegt da auf dem blanken Boden und sagt: "
+  "mn82:11.2": "„Mutter, Vater, Raṭṭhapāla liegt da auf dem blanken Boden und sagt: ",
+  "mn82:11.3": "‚Entweder sterbe ich eben hier oder ich ziehe fort.‘ "
 }
