Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -74,5 +74,6 @@
   "mn82:11.3": "‚Entweder sterbe ich eben hier oder ich ziehe fort.‘ ",
   "mn82:11.4": "Wenn ihr ihm nicht erlaubt, fortzuziehen, wird er eben da sterben. ",
   "mn82:11.5": "Aber wenn ihr ihm erlaubt, fortzuziehen, werdet ihr ihn später wieder sehen. ",
-  "mn82:11.6": "Und wenn er das hauslose Leben nicht genießt, wo soll er sonst hingehen? Er wird eben hierher zurückkommen. "
+  "mn82:11.6": "Und wenn er das hauslose Leben nicht genießt, wo soll er sonst hingehen? Er wird eben hierher zurückkommen. ",
+  "mn82:11.7": "Bitte gebt Raṭṭhapāla die Erlaubnis zum Fortziehen.“ "
 }
