Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn82_translation-de-sabbamitta.json
@@ -79,5 +79,6 @@
   "mn82:11.8": "„Dann, ihr Lieben, geben wir Raṭṭhapāla die Erlaubnis zum Fortziehen. ",
   "mn82:11.9": "Aber wenn er fortgezogen ist, muss er seine Eltern besuchen.“ ",
   "mn82:11.10": "Da gingen Raṭṭhapālas Freunde zu ihm und sagten: ",
-  "mn82:11.11": "„Steh auf, Raṭṭhapāla! Deine Eltern haben dir die Erlaubnis gegeben, aus dem Haus fortzuziehen ins hauslose Leben. "
+  "mn82:11.11": "„Steh auf, Raṭṭhapāla! Deine Eltern haben dir die Erlaubnis gegeben, aus dem Haus fortzuziehen ins hauslose Leben. ",
+  "mn82:11.12": "Aber wenn du fortgezogen bist, musst du deine Eltern besuchen.“ "
 }
